added copy functionality

--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
                 <option value="ZAR">ZAR</option>
             </select>
             <input type="number" min='0' id="amt-to" placeholder="0.00">
+            <span class="material-symbols-outlined copy">
+                content_copy
+                </span>
         </div>
 
         <div class="rate" id="rate">
